--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
           </div>
         </div>
       </div>
+      <p class="link-source">
+        <a href="https://github.com/HoncharenkoA/my-existing-progect" target="_blank">
+          Open-source code</a>
+        <span> by Anastasiia Honcharenko</span> 
   </div>
     <script src="src/script.js"></script>
   </body>
