--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
 
         <div class="location">
-          <a href="#" id="my-loc">My location📍</a>
+          <a href="#" class="myLoc" id="my-loc">My location📍</a>
         </div>
 
         <div class="row">
