--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
             </form>
           </div>
         </div>
-       
-          <div class="location">
-            <a href="#" id="my-loc">My location📍</a>
-          </div>
-    
+
+        <div class="location">
+          <a href="#" id="my-loc">My location📍</a>
+        </div>
+
         <div class="row">
           <div class="col-md-2">
             <img class="sun-main" src="picture/sun.jpg" alt="sun" />
@@ -69,9 +69,9 @@
             </ul>
           </div>
           <div class="col-md-2">
-            <ul class="discription"> 
+            <ul class="discription">
               <li class="currentDay" id="current-day">Current day</li>
-              <li class="currentTime"id="current-time">Current time</li>
+              <li class="currentTime" id="current-time">Current time</li>
               <span class="temp" id="temperature">10</span>
               <span class="unit">
                 <a href="#" id="celsium-link">˚C</a> |
@@ -149,7 +149,12 @@
           </div>
         </div>
       </div>
-    </div>
+      <p class="link-source">
+        <a href="https://github.com/HoncharenkoA/my-existing-progect" target="_blank">
+          Open-source code</a>
+        <span> by Anastasiia Honcharenko</span> 
+      </p>
+  </div>
     <script src="src/script.js"></script>
   </body>
 </html>
