--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <div class="col-md-2">
             <img class="sun-main" src="picture/sun.jpg" alt="sun" />
             <ul class="discription" id="temperature-description">
-              <li>Clear</li>
+              <li id="description"></li>
               <li>Preipitation: 50%</li>
               <li>Wind: 7km/h</li>
             </ul>
