--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
         <div class="row">
           <div class="col-md-2">
             <img class="sun-main" src="picture/sun.jpg" alt="sun" />
-            <ul class="discription" id="temperature-description">
+            <ul class="description" id="temperature-description">
               <li id="description"></li>
-              <li>Preipitation: 50%</li>
-              <li>Wind: 7km/h</li>
+              <li id="humidity"></li>
+              <li id="windSpeed"></li>
             </ul>
           </div>
           <div class="col-md-2">
-            <ul class="discription">
+            <ul class="description">
               <li class="currentDay" id="current-day">Current day</li>
               <li class="currentTime" id="current-time">Current time</li>
               <span class="temp" id="temperature">10</span>
