--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 placeholder="Enter a city"
                 class="form-control shadow-sm border-0"
                 id="searchInput"
+                autocomplete="off"
               />
             </form>
           </div>
@@ -69,9 +70,9 @@
           </div>
           <div class="col-md-2">
             <ul class="description">
-              <li class="currentDay" id="current-day">Current day</li>
-              <li class="currentTime" id="current-time">Current time</li>
-              <span class="temp" id="temperature">10</span>
+              <li class="currentDay" id="current-day"></li>
+              <li class="currentTime" id="current-time"></li>
+              <span class="temp" id="temperature"></span>
               <span class="unit">
                 <a href="#" id="celsium-link">˚C</a> |
                 <a href="#" id="fahrenheit-link">˚F</a>
