--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="mainBlock">
         <div class="row">
           <div class="col-md-6">
-            <h1 id="city">Kiev</h1>
+            <h1 id="city"></h1>
           </div>
           <div class="col-md-4">
             <form class="search">
@@ -74,7 +74,7 @@
               <li class="currentTime" id="current-time"></li>
               <span class="temp" id="temperature"></span>
               <span class="unit">
-                <a href="#" id="celsium-link">˚C</a> |
+                <a href="#" id="celsium-link" class="active">˚C</a> |
                 <a href="#" id="fahrenheit-link">˚F</a>
               </span>
             </ul>
