--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="mainBlock">
+        <div class="mainBlock">
         <div class="row">
           <div class="col-md-6">
             <h1 id="city"></h1>
@@ -61,7 +61,7 @@
         </div>
         <div class="row">
           <div class="col-md-2">
-            <img class="sun-main" src="picture/sun.jpg" alt="sun" />
+            <img class="sun-main" id="icon" src=" " alt="sun" />
             <ul class="description" id="temperature-description">
               <li id="description"></li>
               <li id="humidity"></li>
