--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <div class="row">
           <div class="col-md-2">
-            <img class="sun-main" id="icon" src=" " alt="sun" />
+            <img id="icon" src=" " alt="sun" />
             <ul class="description" id="temperature-description">
               <li id="description"></li>
               <li id="humidity"></li>
@@ -83,31 +83,31 @@
               <div class="position d-flex justify-content-center">
                 <div class="col-md-2">
                   20.06
-                  <img class="cloudy" src="picture/cloudy.png" alt="cloudy" />
+                  <!-- <img class="cloudy" src="picture/cloudy.png" alt="cloudy" /> -->
                   <span class="degrees-max">+18˚</span>
                   <span class="degrees-min">+11˚</span>
                 </div>
                 <div class="col-md-2">
                   21.06
-                  <img class="sun" src="picture/sun.jpg" alt="sun" />
+                  <!-- <img class="sun" src="picture/sun.jpg" alt="sun" /> -->
                   <span class="degrees-max">+18˚</span>
                   <span class="degrees-min">+11˚</span>
                 </div>
                 <div class="col-md-2">
                   22.06
-                  <img class="cloudy" src="picture/cloudy.png" alt="cloudy" />
+                  <!-- <img class="cloudy" src="picture/cloudy.png" alt="cloudy" /> -->
                   <span class="degrees-max">+18˚</span>
                   <span class="degrees-min">+11˚</span>
                 </div>
                 <div class="col-md-2">
                   23.06
-                  <img class="sun" src="picture/sun.jpg" alt="sun" />
+                  <!-- <img class="sun" src="picture/sun.jpg" alt="sun" /> -->
                   <span class="degrees-max">+18˚</span>
                   <span class="degrees-min">+11˚</span>
                 </div>
                 <div class="col-md-2">
                   24.06
-                  <img class="cloudy" src="picture/cloudy.png" alt="cloudy" />
+                  <!-- <img class="cloudy" src="picture/cloudy.png" alt="cloudy" /> -->
                   <span class="degrees-max">+18˚</span>
                   <span class="degrees-min">+11˚</span>
                 </div>
@@ -119,38 +119,34 @@
             <div class="row">
               <div class="d-flex justify-content-center">
                 <div class="col-md-2">
-                  <span class="city">London</span>
-                  <img class="rain" src="picture/rain.png" alt="rain" />
+                  <a href="#" id="city-london">London</a>
+                    <img id="icon" src=" " alt="icon" />
                   +10ºC
-                  <span class="definition">Raining</span>
+                  <span id="description">Raining</span>
                 </div>
                 <div class="col-md-2">
-                  <span class="city">Tokyo</span>
-                  <img class="sun" src="picture/sun.jpg" alt="sun" />
+                  <a href="#" id="city-tokyo">Tokyo</a>
+                  <img id="icon" src=" " alt="icon" />
                   +18ºC
-                  <span class="definition">Clear</span>
+                  <span id="description">Clear</span>
                 </div>
                 <div class="col-md-2">
-                  <span class="city">Sydney</span>
-                  <img class="sun" src="picture/sun.jpg" alt="sun" />
+                  <a href="#" id="city-sydney">Sydney</a>
+                  <img id="icon" src=" " alt="icon" />
                   +25ºC
-                  <span class="definition">Clear</span>
+                  <span id="description">Clear</span>
                 </div>
                 <div class="col-md-2">
-                  <span class="city">Lviv</span>
-                  <img class="cloudy" src="picture/cloudy.png" alt="cloudy" />
+                  <a href="#" id="city-lviv">Lviv</a>
+                  <img id="icon" src=" " alt="icon" />
                   +22ºC
-                  <span class="definition">Cloudy</span>
+                  <span id="description">Cloudy</span>
                 </div>
                 <div class="col-md-2">
-                  <span class="city">Paris</span>
-                  <img
-                    class="thunder"
-                    src="picture/heavy-rain.png"
-                    alt="thunder"
-                  />
+                  <a href="#" id="city-paris">Paris</a>
+                  <img id="icon" src=" " alt="icon" />
                   +10ºC
-                  <span class="definition">Thunder</span>
+                  <span id="description">Thunder</span>
                 </div>
               </div>
             </div>
