Add display Forecast

--- a/index.html
+++ b/index.html
@@ -79,40 +79,8 @@
             </ul>
           </div>
           <div class="col-md-7">
-            <div class="weather-forecast">
-              <div class="position d-flex justify-content-center">
-                <div class="col-md-2">
-                  20.06
-                  <!-- <img class="cloudy" src="picture/cloudy.png" alt="cloudy" /> -->
-                  <span class="degrees-max">+18˚</span>
-                  <span class="degrees-min">+11˚</span>
-                </div>
-                <div class="col-md-2">
-                  21.06
-                  <!-- <img class="sun" src="picture/sun.jpg" alt="sun" /> -->
-                  <span class="degrees-max">+18˚</span>
-                  <span class="degrees-min">+11˚</span>
-                </div>
-                <div class="col-md-2">
-                  22.06
-                  <!-- <img class="cloudy" src="picture/cloudy.png" alt="cloudy" /> -->
-                  <span class="degrees-max">+18˚</span>
-                  <span class="degrees-min">+11˚</span>
-                </div>
-                <div class="col-md-2">
-                  23.06
-                  <!-- <img class="sun" src="picture/sun.jpg" alt="sun" /> -->
-                  <span class="degrees-max">+18˚</span>
-                  <span class="degrees-min">+11˚</span>
-                </div>
-                <div class="col-md-2">
-                  24.06
-                  <!-- <img class="cloudy" src="picture/cloudy.png" alt="cloudy" /> -->
-                  <span class="degrees-max">+18˚</span>
-                  <span class="degrees-min">+11˚</span>
-                </div>
-              </div>
-            </div>
+              <div class="position d-flex justify-content-center"></div>
+              <div class="weather-forecast" id="forecast"></div>
           </div>
           <hr />
           <div class="version-city">
