Change secondary cities

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="mainBlock">
         <div class="row">
           <div class="col-md-6">
-            <h1 class="city-name" id="city"></h1>
+            <h1 class="city-name" id="current-city"></h1>
           </div>
           <div class="col-md-4">
             <form class="search">
@@ -86,35 +86,35 @@
           <div class="version-city">
             <div class="row">
               <div class="d-flex justify-content-center">
-                <div class="col-md-2">
-                  <a href="#" id="city-london">London</a>
-                    <img id="icon" src=" " alt="icon" />
-                  +10ºC
-                  <span id="description">Raining</span>
+                <div class="col-md-2 d-flex flex-column align-items-center">
+                  <a href="#" id="city-london" class="js-city" data-city-name="London">London</a>
+                  <img class="js-icon secondary-weather-icon" src=" " alt="icon" />
+                  <span class="js-temperature"></span>
+                  <span class="js-description"></span>
                 </div>
-                <div class="col-md-2">
-                  <a href="#" id="city-tokyo">Tokyo</a>
-                  <img id="icon" src=" " alt="icon" />
-                  +18ºC
-                  <span id="description">Clear</span>
+                <div class="col-md-2 d-flex flex-column align-items-center">
+                  <a href="#" id="city-tokyo" class="js-city" data-city-name="Tokyo">Tokyo</a>
+                  <img class="js-icon secondary-weather-icon" src=" " alt="icon" />
+                  <span class="js-temperature"></span>
+                  <span class="js-description"></span>
                 </div>
-                <div class="col-md-2">
-                  <a href="#" id="city-sydney">Sydney</a>
-                  <img id="icon" src=" " alt="icon" />
-                  +25ºC
-                  <span id="description">Clear</span>
+                <div class="col-md-2 d-flex flex-column align-items-center">
+                  <a href="#" id="city-sydney" class="js-city" data-city-name="Sydney">Sydney</a>
+                  <img class="js-icon secondary-weather-icon" src=" " alt="icon" />
+                  <span class="js-temperature"></span>
+                  <span class="js-description"></span>
                 </div>
-                <div class="col-md-2">
-                  <a href="#" id="city-lviv">Lviv</a>
-                  <img id="icon" src=" " alt="icon" />
-                  +22ºC
-                  <span id="description">Cloudy</span>
+                <div class="col-md-2 d-flex flex-column align-items-center">
+                  <a href="#" id="city-lviv" class="js-city" data-city-name="Lviv">Lviv</a>
+                  <img class="js-icon secondary-weather-icon" src=" " alt="icon" />
+                  <span class="js-temperature"></span>
+                  <span class="js-description"></span>
                 </div>
-                <div class="col-md-2">
-                  <a href="#" id="city-paris">Paris</a>
-                  <img id="icon" src=" " alt="icon" />
-                  +10ºC
-                  <span id="description">Thunder</span>
+                <div class="col-md-2 d-flex flex-column align-items-center">
+                  <a href="#" id="city-paris" class="js-city" data-city-name="Paris">Paris</a>
+                  <img class="js-icon secondary-weather-icon" src=" " alt="icon" />
+                  <span class="js-temperature"></span>
+                  <span class="js-description"></span>
                 </div>
               </div>
             </div>
