Add CSS to secondary weather

--- a/index.html
+++ b/index.html
@@ -87,34 +87,34 @@
             <div class="row">
               <div class="d-flex justify-content-center">
                 <div class="col-md-2 d-flex flex-column align-items-center">
-                  <a href="#" id="city-london" class="js-city" data-city-name="London">London</a>
+                  <a href="#" id="city-london" class="js-city secondary-weather-name" data-city-name="London">London</a>
                   <img class="js-icon secondary-weather-icon" src=" " alt="icon" />
-                  <span class="js-temperature"></span>
-                  <span class="js-description"></span>
+                  <span class="js-temperature secondary-weather-temp"></span>
+                  <span class="js-description secondary-weather-des"></span>
                 </div>
                 <div class="col-md-2 d-flex flex-column align-items-center">
-                  <a href="#" id="city-tokyo" class="js-city" data-city-name="Tokyo">Tokyo</a>
+                  <a href="#" id="city-tokyo" class="js-city secondary-weather-name" data-city-name="Tokyo">Tokyo</a>
                   <img class="js-icon secondary-weather-icon" src=" " alt="icon" />
-                  <span class="js-temperature"></span>
-                  <span class="js-description"></span>
+                  <span class="js-temperature secondary-weather-temp"></span>
+                  <span class="js-description secondary-weather-des"></span>
                 </div>
                 <div class="col-md-2 d-flex flex-column align-items-center">
-                  <a href="#" id="city-sydney" class="js-city" data-city-name="Sydney">Sydney</a>
+                  <a href="#" id="city-sydney" class="js-city secondary-weather-name" data-city-name="Sydney">Sydney</a>
                   <img class="js-icon secondary-weather-icon" src=" " alt="icon" />
-                  <span class="js-temperature"></span>
-                  <span class="js-description"></span>
+                  <span class="js-temperature secondary-weather-temp"></span>
+                  <span class="js-description secondary-weather-des"></span>
                 </div>
                 <div class="col-md-2 d-flex flex-column align-items-center">
-                  <a href="#" id="city-lviv" class="js-city" data-city-name="Lviv">Lviv</a>
+                  <a href="#" id="city-lviv" class="js-city secondary-weather-name" data-city-name="Lviv">Lviv</a>
                   <img class="js-icon secondary-weather-icon" src=" " alt="icon" />
-                  <span class="js-temperature"></span>
-                  <span class="js-description"></span>
+                  <span class="js-temperature secondary-weather-temp"></span>
+                  <span class="js-description secondary-weather-des"></span>
                 </div>
                 <div class="col-md-2 d-flex flex-column align-items-center">
-                  <a href="#" id="city-paris" class="js-city" data-city-name="Paris">Paris</a>
+                  <a href="#" id="city-paris" class="js-city secondary-weather-name" data-city-name="Paris">Paris</a>
                   <img class="js-icon secondary-weather-icon" src=" " alt="icon" />
-                  <span class="js-temperature"></span>
-                  <span class="js-description"></span>
+                  <span class="js-temperature secondary-weather-temp"></span>
+                  <span class="js-description secondary-weather-des"></span>
                 </div>
               </div>
             </div>
