--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
           <div class="col-md-6">
             <h1 class="city-name" id="current-city"></h1>
           </div>
-          <div class="col-md-4">
-            <form class="search">
+          <form class="col-md-6 row" id="search-city">
+            <div class="col-md-8">
               <input
                 type="text"
                 placeholder="Enter a city"
@@ -42,18 +42,16 @@
                 id="searchInput"
                 autocomplete="off"
               />
-            </form>
-          </div>
-          <div class="col-md-2">
-            <form class="search" id="search-city">
+            </div>
+            <div class="col-md-4">
               <input
                 class="form-control btn btn-primary shadow-sm"
                 type="submit"
                 value="Search"
                 id="submitButton"
               />
-            </form>
-          </div>
+            </div>
+          </form>
         </div>
         <div class="location">
           <a href="#" id="my-loc">My location📍</a>
@@ -79,40 +77,90 @@
             </ul>
           </div>
           <div class="col-md-7">
-              <div class="position d-flex justify-content-center"></div>
-              <div class="weather-forecast" id="forecast"></div>
+            <div class="position d-flex justify-content-center"></div>
+            <div class="weather-forecast" id="forecast"></div>
           </div>
           <hr />
           <div class="version-city">
             <div class="row">
               <div class="d-flex justify-content-center">
                 <div class="col-md-2 d-flex flex-column align-items-center">
-                  <a href="#" id="city-london" class="js-city secondary-weather-name" data-city-name="London">London</a>
-                  <img class="js-icon secondary-weather-icon" src=" " alt="icon" />
+                  <a
+                    href="#"
+                    id="city-london"
+                    class="js-city secondary-weather-name"
+                    data-city-name="London"
+                    >London</a
+                  >
+                  <img
+                    class="js-icon secondary-weather-icon"
+                    src=" "
+                    alt="icon"
+                  />
                   <span class="js-temperature secondary-weather-temp"></span>
                   <span class="js-description secondary-weather-des"></span>
                 </div>
                 <div class="col-md-2 d-flex flex-column align-items-center">
-                  <a href="#" id="city-tokyo" class="js-city secondary-weather-name" data-city-name="Tokyo">Tokyo</a>
-                  <img class="js-icon secondary-weather-icon" src=" " alt="icon" />
+                  <a
+                    href="#"
+                    id="city-tokyo"
+                    class="js-city secondary-weather-name"
+                    data-city-name="Tokyo"
+                    >Tokyo</a
+                  >
+                  <img
+                    class="js-icon secondary-weather-icon"
+                    src=" "
+                    alt="icon"
+                  />
                   <span class="js-temperature secondary-weather-temp"></span>
                   <span class="js-description secondary-weather-des"></span>
                 </div>
                 <div class="col-md-2 d-flex flex-column align-items-center">
-                  <a href="#" id="city-sydney" class="js-city secondary-weather-name" data-city-name="Sydney">Sydney</a>
-                  <img class="js-icon secondary-weather-icon" src=" " alt="icon" />
+                  <a
+                    href="#"
+                    id="city-sydney"
+                    class="js-city secondary-weather-name"
+                    data-city-name="Sydney"
+                    >Sydney</a
+                  >
+                  <img
+                    class="js-icon secondary-weather-icon"
+                    src=" "
+                    alt="icon"
+                  />
                   <span class="js-temperature secondary-weather-temp"></span>
                   <span class="js-description secondary-weather-des"></span>
                 </div>
                 <div class="col-md-2 d-flex flex-column align-items-center">
-                  <a href="#" id="city-lviv" class="js-city secondary-weather-name" data-city-name="Lviv">Lviv</a>
-                  <img class="js-icon secondary-weather-icon" src=" " alt="icon" />
+                  <a
+                    href="#"
+                    id="city-lviv"
+                    class="js-city secondary-weather-name"
+                    data-city-name="Lviv"
+                    >Lviv</a
+                  >
+                  <img
+                    class="js-icon secondary-weather-icon"
+                    src=" "
+                    alt="icon"
+                  />
                   <span class="js-temperature secondary-weather-temp"></span>
                   <span class="js-description secondary-weather-des"></span>
                 </div>
                 <div class="col-md-2 d-flex flex-column align-items-center">
-                  <a href="#" id="city-paris" class="js-city secondary-weather-name" data-city-name="Paris">Paris</a>
-                  <img class="js-icon secondary-weather-icon" src=" " alt="icon" />
+                  <a
+                    href="#"
+                    id="city-paris"
+                    class="js-city secondary-weather-name"
+                    data-city-name="Paris"
+                    >Paris</a
+                  >
+                  <img
+                    class="js-icon secondary-weather-icon"
+                    src=" "
+                    alt="icon"
+                  />
                   <span class="js-temperature secondary-weather-temp"></span>
                   <span class="js-description secondary-weather-des"></span>
                 </div>
